feat: Manage empty state and initial state

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -34,6 +34,12 @@
     padding: 64px 0;
 }
 
+.centerContent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .search {
     padding: 8px;
     width: 50%;
