feat: Manage errors

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 :root {
   /* Colors */
-  --color-header: #AAA;
+  --color-header: #d9e0e4;
 
   /* Font sizes */
   --text-xs: 0.825em;
