--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,8 @@ h1, h2, h3, h4, h5, h6, p {
 
 :root {
   /* Colors */
-  --color-header: #d9e0e4;
+  --color-header: #f1f4f4;
+  --color-input-border: #3c3c3c;
 
   /* Font sizes */
   --text-xs: 0.825em;
