--- a/frontend/src/components/user/CardUser.module.css
+++ b/frontend/src/components/user/CardUser.module.css
@@ -1,51 +1,50 @@
 .card {
-    border-radius: 8px;
-    width: 100%;
-    box-shadow: 0 0 2px 2px #33333311;
+	border-radius: 8px;
+	width: 100%;
+	box-shadow: 0 0 2px 2px #33333311;
 }
 
 .card__body {
-    position: relative;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 1em;
-    font-size: .75em;
+	position: relative;
+	padding: 16px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	gap: 1em;
+	font-size: 0.75em;
 }
 
 .card__text {
-    flex: 1;
+	flex: 1;
 }
 
 .card__userId {
-    opacity: .5;
-    display: inline-block;
-    font-size: var(--text-xs);
-    margin-bottom: 4px;
+	opacity: 0.5;
+	display: inline-block;
+	font-size: var(--text-xs);
+	margin-bottom: 4px;
 }
 
 .card__avatar {
-    --size: 48px;
-    width: var(--size);
-    height: var(--size);
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 16px;
+	--size: 48px;
+	width: var(--size);
+	height: var(--size);
+	border-radius: 50%;
+	object-fit: cover;
+	margin-bottom: 16px;
 }
 
-
 .card__button {
-    background-color: rgba(65, 176, 216, 0.97);
-    border: none;
-    border-radius: 4px;
-    padding: 4px;
-    cursor: pointer;
+	background-color: rgba(65, 176, 216, 0.97);
+	border: none;
+	border-radius: 4px;
+	padding: 4px;
+	cursor: pointer;
 }
 
 .card__checkbox {
-    position: absolute;
-    top: 4px;
-    left: 4px;
+	position: absolute;
+	top: 4px;
+	left: 4px;
 }
